--- a/04. Creative Hover Effect/index.html
+++ b/04. Creative Hover Effect/index.html
@@ -1,16 +1,18 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Hover Effect</title>
+    <title>Creative Hover Effect</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<div class="container">
+    <div class="clip clip1"></div>
+    <div class="clip clip2"></div>
+    <div class="clip clip3"></div>
+</div>
+
 <body>
-    <section class="container">
-        <div class="clip clip1"></div>
-        <div class="clip clip2"></div>
-        <div class="clip clip2"></div>
-        <div class="clip clip3"></div>
-    </section>
+    
 </body>
 </html>
